[CI] Have CI create the objects/opt folder [hopefully that fixes my issue. w/ opt build...

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,6 +19,8 @@ jobs:
       run: sudo apt install libgflags-dev libgtest-dev libc++-dev
     - name: make solitaire
       run: make solitaire
+    - name: prep test
+      run: mkdir -p objects/opt
     - name: make test
       run: make test
 
