--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -20,7 +20,7 @@ jobs:
     - name: make solitaire
       run: make solitaire
     - name: prep test
-      run: mkdir -p objects/opt
+      run: mkdir -p objects/dbg
     - name: make test
       run: make test
 
