[ci] Fix uses/run key issue in bazel install ci file

--- a/.github/workflows/bazelisk-build.yml
+++ b/.github/workflows/bazelisk-build.yml
@@ -20,4 +20,4 @@ jobs:
     - name: setup keyring for bazel
       run: sudo mv bazel-archive-keyring.gpg /usr/share/keyrings;
     - name: add apt repo for bazel
-        echo "deb [arch=amd64 signed-by=/usr/share/keyrings/bazel-archive-keyring.gpg] https://storage.googleapis.com/bazel-apt stable jdk1.8" | sudo tee /etc/apt/sources.list.d/bazel.list
+      run: echo "deb [arch=amd64 signed-by=/usr/share/keyrings/bazel-archive-keyring.gpg] https://storage.googleapis.com/bazel-apt stable jdk1.8" | sudo tee /etc/apt/sources.list.d/bazel.list
