--- a/.github/workflows/bazelisk-build.yml
+++ b/.github/workflows/bazelisk-build.yml
@@ -21,3 +21,7 @@ jobs:
       run: sudo mv bazel-archive-keyring.gpg /usr/share/keyrings;
     - name: add apt repo for bazel
       run: echo "deb [arch=amd64 signed-by=/usr/share/keyrings/bazel-archive-keyring.gpg] https://storage.googleapis.com/bazel-apt stable jdk1.8" | sudo tee /etc/apt/sources.list.d/bazel.list
+    - name: install & update bazel
+      run: sudo apt update && sudo apt install bazel
+    - name: build bz_solitaire
+      run: bazel build :bz_solitaire
