--- a/.github/workflows/bazelisk-build.yml
+++ b/.github/workflows/bazelisk-build.yml
@@ -25,3 +25,7 @@ jobs:
       run: sudo apt update && sudo apt install bazel
     - name: build bz_solitaire
       run: bazel build :bz_solitaire
+    - name: test card
+      run: bazel test :gtest_card
+    - name: test deck
+      run: bazel test :gtest_deck
