[CI] Update outputs, fix move.toString to ignore src counts, make cpp CI use bazel output

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: setup gpg
+      run: sudo apt install apt-transport-https curl gnupg -y;
+    - name: gpg bazel
+      run: curl -fsSL https://bazel.build/bazel-release.pub.gpg | gpg --dearmor >bazel-archive-keyring.gpg;
+    - name: setup keyring for bazel
+      run: sudo mv bazel-archive-keyring.gpg /usr/share/keyrings;
+    - name: add apt repo for bazel
+      run: echo "deb [arch=amd64 signed-by=/usr/share/keyrings/bazel-archive-keyring.gpg] https://storage.googleapis.com/bazel-apt stable jdk1.8" | sudo tee /etc/apt/sources.list.d/bazel.list
+    - name: install & update bazel
+      run: sudo apt update && sudo apt install bazel
     - name: install deps
       run: sudo apt install libgflags-dev libgtest-dev libc++-dev
     - name: prep dirs
