[CI] Fix CI to use updated bazel target names

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -28,8 +28,8 @@ jobs:
     - name: prep dirs
       run: mkdir -p objects/dbg objects/opt
     - name: make solitaire
-      run: make bz_solitaire
+      run: make solitaire
     - name: make dbg solitaire
-      run: make bz_dbg_solitaire
+      run: make dbg_solitaire
     - name: make test
       run: make test
