--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -12,3 +12,4 @@ module(
 
 bazel_dep(name = "googletest", version = "1.17.0")
 bazel_dep(name = "gflags", version = "2.2.2")
+bazel_dep(name = "google_benchmark", version = "1.9.4")
